// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsSnippet component should update the JavaScript snippet when the flag prop changes 1`] = `
<DocumentFragment>
  <div
    class="mr-feature-flag-js-snippet-container"
  >
    <h3>
      JavaScript Snippet
    </h3>
    <button
      aria-label="Copy to clipboard"
      aria-pressed="false"
      class="components-button codeb-feature-flags-clipboard-base is-tertiary has-icon"
      type="button"
    >
      <span
        class="dashicon dashicons dashicons-clipboard"
      />
    </button>
    <pre
      style="display: block; overflow-x: auto; background: rgb(43, 43, 43); color: rgb(248, 248, 242); padding: 0.5em;"
    >
      <code
        class="language-typescript"
        style="white-space: pre;"
      >
        <span
          style="color: rgb(220, 198, 224);"
        >
          import
        </span>
        <span>
           domReady 
        </span>
        <span
          style="color: rgb(220, 198, 224);"
        >
          from
        </span>
        <span>
           
        </span>
        <span
          style="color: rgb(171, 227, 56);"
        >
          '@wordpress/dom-ready'
        </span>
        <span>
          ;

        </span>
        <span>
          domReady(
        </span>
        <span
          class="hljs-function"
          style="color: rgb(220, 198, 224);"
        >
          function
        </span>
        <span
          class="hljs-function"
        >
           (
        </span>
        <span
          class="hljs-function"
        >
          ) 
        </span>
        <span>
          {

        </span>
        <span>
          	
        </span>
        <span
          style="color: rgb(220, 198, 224);"
        >
          if
        </span>
        <span>
           (

        </span>
        <span>
          		
        </span>
        <span
          style="color: rgb(220, 198, 224);"
        >
          typeof
        </span>
        <span>
           
        </span>
        <span
          style="color: rgb(245, 171, 53);"
        >
          window
        </span>
        <span>
          ?.codebFeatureFlags !== 
        </span>
        <span
          style="color: rgb(171, 227, 56);"
        >
          'undefined'
        </span>
        <span>
           &&

        </span>
        <span>
          		
        </span>
        <span
          style="color: rgb(245, 171, 53);"
        >
          window
        </span>
        <span>
          .codebFeatureFlags.isEnabled(
        </span>
        <span
          style="color: rgb(171, 227, 56);"
        >
          'testFlag1'
        </span>
        <span>
          )

        </span>
        	) {

        <span>
          		
        </span>
        <span
          style="color: rgb(212, 208, 171);"
        >
          // js code goes here...
        </span>
        <span>
          

        </span>
        	}
});
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`JsSnippet component should update the JavaScript snippet when the flag prop changes 2`] = `
<DocumentFragment>
  <div
    class="mr-feature-flag-js-snippet-container"
  >
    <h3>
      JavaScript Snippet
    </h3>
    <button
      aria-label="Copy to clipboard"
      aria-pressed="false"
      class="components-button codeb-feature-flags-clipboard-base is-tertiary has-icon"
      type="button"
    >
      <span
        class="dashicon dashicons dashicons-clipboard"
      />
    </button>
    <pre
      style="display: block; overflow-x: auto; background: rgb(43, 43, 43); color: rgb(248, 248, 242); padding: 0.5em;"
    >
      <code
        class="language-typescript"
        style="white-space: pre;"
      >
        <span
          style="color: rgb(220, 198, 224);"
        >
          import
        </span>
        <span>
           domReady 
        </span>
        <span
          style="color: rgb(220, 198, 224);"
        >
          from
        </span>
        <span>
           
        </span>
        <span
          style="color: rgb(171, 227, 56);"
        >
          '@wordpress/dom-ready'
        </span>
        <span>
          ;

        </span>
        <span>
          domReady(
        </span>
        <span
          class="hljs-function"
          style="color: rgb(220, 198, 224);"
        >
          function
        </span>
        <span
          class="hljs-function"
        >
           (
        </span>
        <span
          class="hljs-function"
        >
          ) 
        </span>
        <span>
          {

        </span>
        <span>
          	
        </span>
        <span
          style="color: rgb(220, 198, 224);"
        >
          if
        </span>
        <span>
           (

        </span>
        <span>
          		
        </span>
        <span
          style="color: rgb(220, 198, 224);"
        >
          typeof
        </span>
        <span>
           
        </span>
        <span
          style="color: rgb(245, 171, 53);"
        >
          window
        </span>
        <span>
          ?.codebFeatureFlags !== 
        </span>
        <span
          style="color: rgb(171, 227, 56);"
        >
          'undefined'
        </span>
        <span>
           &&

        </span>
        <span>
          		
        </span>
        <span
          style="color: rgb(245, 171, 53);"
        >
          window
        </span>
        <span>
          .codebFeatureFlags.isEnabled(
        </span>
        <span
          style="color: rgb(171, 227, 56);"
        >
          'testFlag2'
        </span>
        <span>
          )

        </span>
        	) {

        <span>
          		
        </span>
        <span
          style="color: rgb(212, 208, 171);"
        >
          // js code goes here...
        </span>
        <span>
          

        </span>
        	}
});
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
